# test-Space

./: .gitignore  AUTOMATION_DESIGN.md  README.md  TestSpace_API.md  package-lock.json  package.json  新建文本文档.txt
.agents/: AGENTS.md
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.claude/: CLAUDE.md
.claude/scripts/: statusline.ps1
aider-templates/: .aider.conf.yml.template  CONVENTIONS.md.template  README.md  init_aider_project.py
document/: TestSpace需求.md  code.txt
document/testcase_management/: .gitattributes  .gitignore  AIVOICE_INTEGRATION.md  README.md
reports/13378487ee15/: index.html  summary.json
reports/3a5633fbc1d2/: index.html  summary.json
reports/4e8fb6f0dc88/: index.html  summary.json
reports/51b788c573ee/: index.html  summary.json
reports/5bd771caac09/: index.html  summary.json
reports/750954e4e0ee/: index.html  summary.json
reports/89c28e22b2ea/: index.html  summary.json
reports/906a72ffed67/: index.html  summary.json
reports/a1aa1a108a87/: index.html  summary.json
reports/a69009d468cc/: index.html  summary.json
reports/dab20c12d815/: index.html  summary.json
reports/f359abba0f53/: index.html  summary.json
test-space/: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  CONVENTIONS.md  DEVELOPMENT.md  aider_workflow.py  caseSpace.md  index.html  package-lock.json  package.json  run_workflow.ps1  tailwind.config.ts  tsconfig.json  vite.config.ts
test-space/scripts/: auto-update-dev.mjs  bump-version.mjs  clean.mjs  seed.cjs
test-space/src/: App.vue  env.d.ts
test-space/src-tauri/: 0  Cargo.toml  tauri.conf.json
test-space/src-tauri/capabilities/: default.json
test-space/src-tauri/icons/: icon.icns
test-space/src-tauri/src/: adb.rs  auto_runner.rs  lib.rs  mirror.rs  proxy.rs  script_exec.rs  serial_port.rs  zip_util.rs
test-space/src-tauri/windows/: hooks.nsh
tv_engine/: __init__.py  main.py  requirements.txt
tv_engine/actions/: __init__.py  assert_actions.py  input_text.py  launch_app.py  navigate.py  press_key.py  screenshot.py  set_variable.py  swipe.py  wait.py
tv_engine/core/: __init__.py  device.py  explorer.py  healer.py  locator.py  navigator.py  reporter.py  runner.py  (+1 more)
(+471 files in other folders)
