[package]
name = "app"
version = "1.2.8"
description = "Test Space - Engineering Workstation"
authors = ["Bing"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serialport = "4.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
http-mitm-proxy = "0.18"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14"
http-body-util = "0.1"
bytes = "1"
regex = "1"
flate2 = "1"
md-5 = "0.10"
sha2 = "0.10"
x509-parser = "0.18"
pem = "3"
